# RP2040-Rotary-Encoder

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  Readme.md  clib.json  encoder.c  encoder.h  example.c
example/: CMakeLists.txt  example.c
